--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -30,7 +30,7 @@ a {
 }
 
 body {
-    height: 100%;
+    //height: 100%;
     margin: 0;
     background: linear-gradient(107deg, #348998 9%, #a8a4a4 100%);
     color: black;
